--- a/inheritance/introduction/index.html
+++ b/inheritance/introduction/index.html
@@ -405,13 +405,13 @@ new amount after withdrawal: 23000</code></pre></div>
 <li>Write a <code class="language-text">public</code> class named <code class="language-text">Vehicle</code>
 <ul>
 <li>Add a private <code class="language-text">licensePlate</code> field</li>
-<li>And getter/setter methods for <code class="language-text">licensePlate</code></li>
+<li>And protected getter/setter methods for <code class="language-text">licensePlate</code></li>
 </ul>
 </li>
 <li>Extend <code class="language-text">Vehicle</code> with the <code class="language-text">public</code> class <code class="language-text">Car</code>
 <ul>
 <li>Add a package private <code class="language-text">numberOfSeats</code> field</li>
-<li>Add a setter for <code class="language-text">licensePlate</code> on <code class="language-text">Car</code>.</li>
+<li>Add protected getter/setter metehods for <code class="language-text">numberOfSeats</code>.</li>
 </ul>
 </li>
 <li>Write a <code class="language-text">Runner</code> class where you create a Vehicle and a Car and invoke all its accessible members.</li>
@@ -440,4 +440,4 @@ new amount after withdrawal: 23000</code></pre></div>
 <li>
 <p><strong>Class invariants may break.</strong> The base class perhaps maintains certain internal invariants. Perhaps it’s immutable, or intended to be thread-safe. There’s no way to enforce such design decisions upon subclasses. If you receive an object of the base class type, you technically can’t assume it’s immutable or thread-safe unless it’s final.</p>
 </li>
-</ol></div></div></div></div><div class="footer"><div class="footer-navbar"></div><div class="footer-content"><a href="/exceptions/stack-trace">Previous</a><a href="/inheritance/interfaces">Next</a></div></div></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/inheritance/introduction";window.___webpackCompilationHash="f9fdda04faf00c97579c";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"polyfill":["/polyfill-82df740e7cad994d0af0.js"],"app":["/app-28fa38d494eb64b1e03c.js"],"component---src-pages-index-js":["/component---src-pages-index-js-f20df513a4e986694e9b.js"],"component---src-templates-template-js":["/component---src-templates-template-js-30aea6722b43d4902754.js"]};/*]]>*/</script><script src="/polyfill-82df740e7cad994d0af0.js" nomodule=""></script><script src="/component---src-templates-template-js-30aea6722b43d4902754.js" async=""></script><script src="/app-28fa38d494eb64b1e03c.js" async=""></script><script src="/framework-675a07cb9aff63570c38.js" async=""></script><script src="/webpack-runtime-87a121c6d1e830127962.js" async=""></script></body></html>
+</ol></div></div></div></div><div class="footer"><div class="footer-navbar"></div><div class="footer-content"><a href="/exceptions/stack-trace">Previous</a><a href="/inheritance/interfaces">Next</a></div></div></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/inheritance/introduction";window.___webpackCompilationHash="8f6c48690fb9168cf100";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"polyfill":["/polyfill-82df740e7cad994d0af0.js"],"app":["/app-28fa38d494eb64b1e03c.js"],"component---src-pages-index-js":["/component---src-pages-index-js-f20df513a4e986694e9b.js"],"component---src-templates-template-js":["/component---src-templates-template-js-30aea6722b43d4902754.js"]};/*]]>*/</script><script src="/polyfill-82df740e7cad994d0af0.js" nomodule=""></script><script src="/component---src-templates-template-js-30aea6722b43d4902754.js" async=""></script><script src="/app-28fa38d494eb64b1e03c.js" async=""></script><script src="/framework-675a07cb9aff63570c38.js" async=""></script><script src="/webpack-runtime-87a121c6d1e830127962.js" async=""></script></body></html>
