--- a/inheritance/overloading/index.html
+++ b/inheritance/overloading/index.html
@@ -233,11 +233,13 @@
 <code class="language-text">ONE</code>, <code class="language-text">TWO</code> or <code class="language-text">THREE</code>?</p>
 <h2 id="exercise-7" style="position:relative;"><a href="#exercise-7" aria-label="exercise 7 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Exercise 7</h2>
 <p>Write a <code class="language-text">Calculator</code> class that has a method to calculate displacement during uniform acceleration <code class="language-text">double calculateDisplacement(double time, double acceleration, double initialVelocity)</code></p>
-<p>Remember the <code class="language-text">d = (v0 * t) + (a * t^2)/2</code> where:
-- <code class="language-text">d</code>: distance<br>
-- <code class="language-text">v0</code>: initial velocity<br>
-- <code class="language-text">a</code>: acceleration<br>
-- <code class="language-text">t</code>: time</p>
+<p>Remember that <code class="language-text">d = (v0 * t) + (a * t^2)/2</code> where:</p>
+<ul>
+<li><code class="language-text">d</code>: distance</li>
+<li><code class="language-text">v0</code>: initial velocity</li>
+<li><code class="language-text">a</code>: acceleration</li>
+<li><code class="language-text">t</code>: time</li>
+</ul>
 <p>Overload <code class="language-text">calculateDisplacement</code> with two new versions:</p>
 <ul>
 <li><code class="language-text">double calculateDisplacement(double time, double acceleration)</code> assuming <code class="language-text">initialVelocity = 1</code></li>
