--- a/collections/queue/index.html
+++ b/collections/queue/index.html
@@ -346,6 +346,7 @@ deque = []</code></pre></div>
 <li>The last node of a list is its <strong>tail</strong></li>
 <li>Note: the term tail may also refer the rest of the list excluding the head</li>
 </ul>
+<p>Here is an example of a linked list with 3 elements:</p>
 <p><span
       class="gatsby-resp-image-wrapper"
       style="position: relative; display: block; margin-left: auto; margin-right: auto; max-width: 800px; "
@@ -377,8 +378,7 @@ deque = []</code></pre></div>
       />
   </a>
     </span></p>
-<h2 id="adding-and-removing-items-in-a-linked-list" style="position:relative;"><a href="#adding-and-removing-items-in-a-linked-list" aria-label="adding and removing items in a linked list permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Adding and removing items in a linked list</h2>
-<p><strong>Adding to the list:</strong></p>
+<p>Here is how an element is <strong>added</strong> to a linked list:</p>
 <p><span
       class="gatsby-resp-image-wrapper"
       style="position: relative; display: block; margin-left: auto; margin-right: auto; max-width: 800px; "
@@ -410,7 +410,7 @@ deque = []</code></pre></div>
       />
   </a>
     </span></p>
-<p><strong>Removing from the list:</strong></p>
+<p>Here is how an element is removed from a linked list:</p>
 <p><span
       class="gatsby-resp-image-wrapper"
       style="position: relative; display: block; margin-left: auto; margin-right: auto; max-width: 760px; "
@@ -538,7 +538,7 @@ deque = []</code></pre></div>
       />
   </a>
     </span></p>
-<p>The wikipedia article has a nicely detailed description of linked lists: <a href="https://en.wikipedia.org/wiki/Linked_list">https://en.wikipedia.org/wiki/Linked_list</a></p>
+<p>This <a href="https://en.wikipedia.org/wiki/Linked_list">wikipedia article</a> has a nicely detailed description of linked lists.</p>
 <h2 id="class-linkedliste" style="position:relative;"><a href="#class-linkedliste" aria-label="class linkedliste permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Class: <code class="language-text">LinkedList&lt;E></code></h2>
 <p><span
       class="gatsby-resp-image-wrapper"
